tests/fixtures/positive/potential-bugs/MissingPackageDeclaration.kt
class NoPackage {
    fun doSomething() {
        println("hello")
    }
}
