tests/fixtures/negative/comments/DocumentationOverPrivateFunction.kt
package comments

class Example {
    private fun helper() {
        println("hello")
    }
}
